--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
 asgiref==3.8.1
-Django==5.0.6
+diff-match-patch==20230430
+Django==5.1
+django-import-export==4.1.1
+django-template-partials==24.4
+djangorestframework==3.15.2
 gunicorn==22.0.0
+pillow==10.4.0
+sqlparse==0.5.1
 psycopg2==2.9.9
-sqlparse==0.5.0
+tablib==3.5.0
 whitenoise==6.7.0
