--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ django-import-export==4.1.1
 django-template-partials==24.4
 djangorestframework==3.15.2
 gunicorn==22.0.0
+packaging==24.1
 pillow==10.4.0
-sqlparse==0.5.1
 psycopg2==2.9.9
+python-dotenv==1.0.1
+sqlparse==0.5.1
 tablib==3.5.0
 whitenoise==6.7.0
