--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 asgiref==3.8.1
 diff-match-patch==20230430
+distlib==0.3.8
+dj-database-url==2.2.0
 Django==5.1
 django-import-export==4.1.1
 django-template-partials==24.4
 djangorestframework==3.15.2
+filelock==3.15.4
 gunicorn==22.0.0
 packaging==24.1
 pillow==10.4.0
+platformdirs==4.2.2
 psycopg2==2.9.9
 python-dotenv==1.0.1
 sqlparse==0.5.1
 tablib==3.5.0
+typing_extensions==4.12.2
+virtualenv==20.26.3
 whitenoise==6.7.0
