make django prettier a dev dependency

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "description": "",
   "dependencies": {
     "npm-watch": "^0.13.0",
-    "prettier-plugin-django": "^0.5.18",
     "sass": "^1.77.8"
+  },
+  "devDependencies": {
+    "prettier-plugin-django": "^0.5.18"
   }
 }
