--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,18 @@
 {
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "printWidth": 80,
+  "endOfLine": "auto",
+  "overrides": [
+    {
+      "files": "*.json",
+      "options": {
+        "printWidth": 80
+      }
+    }
+  ],
+  "bracketSpacing": true,
+  "arrowParens": "avoid"
 }
