--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "collectStatic": {
       "patterns": [
         "gallery/static/**/**",
-        "gallery/static/*"
+        "gallery/static/js/**/*",
+        "gallery/static/scss/**/*",
+        "gallery/static/css/**/*",
+        "gallery/static/images/**/*"
       ],
       "quiet": false
     }
@@ -27,6 +30,7 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "animate.css": "^4.1.1",
     "npm-watch": "^0.13.0",
     "sass": "^1.77.8"
   }
